# lightrag-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: coverage.yml  docker.yml  publish.yml  tests.yml
docker/: entrypoint.sh  lightrag-example.env  mcp-example.env
src/lightrag_mcp/: __init__.py  config.py  lightrag_client.py  main.py  server.py
src/lightrag_mcp/client/: __init__.py
src/lightrag_mcp/client/light_rag_server_api_client/: client.py
src/lightrag_mcp/client/light_rag_server_api_client/api/default/: get_auth_status_auth_status_get.py  redirect_to_webui_get.py
src/lightrag_mcp/client/light_rag_server_api_client/api/documents/: __init__.py  insert_batch_documents_file_batch_post.py  insert_file_documents_file_post.py
src/lightrag_mcp/client/light_rag_server_api_client/models/: __init__.py  doc_status_response.py  docs_statuses_response.py  docs_statuses_response_statuses.py  entity_response.py  merge_entities_request.py  ollama_chat_request.py  ollama_generate_request.py  pipeline_status_response.py  query_request.py  relation_response.py
