[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightrag_mcp"
dynamic = ["version"]
description = "MCP Server for LightRAG"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "shemhamforash", email = "killsterak16@gmail.com"},
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "python-dotenv>=1.0.1",
    "attrs>=25.3.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11.4",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0"
]

[project.scripts]
lightrag-mcp = "lightrag_mcp.main:main"

[tool.hatch.version]
path = "src/lightrag_mcp/__init__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["lightrag_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/lightrag_mcp/**"]
